feat(logsearch): 日志搜索支持选择排序字段
Signed-off-by: 汪世胤 <wangshiyin@hinadt.com>